# UnemploymentStudios

./: .env.example  README.md  crewai_flow.html  pyproject.toml  test_tool.py
Game/: boot.js  emotional_tone.js  file_structure copy 2.txt  file_structure copy.txt  file_structure.txt  game.js  game_concept copy 2.txt  game_concept copy.txt  game_concept.txt  index copy 2.html  index copy 3.html  index copy.html  index.html  main.js  music.js  preloader.js  style.css
Game/challenges/: ai_puzzles.js  simple_bugs.js
Game/character/: alex_codewright.js
Game/levels/: advanced_algorithms.json  final_job_interview.json  internship_experience.json  intro_to_programming.json
src/unemploymentstudios/: main copy 2.py  main copy.py  main.py  types.py  updatedTypes.py
src/unemploymentstudios/crews/asset_generation_crew/: asset_generation_crew.py
src/unemploymentstudios/crews/asset_generation_crew/config/: agents.yaml  tasks.yaml
src/unemploymentstudios/crews/concept_expansion_crew/: concept_expansion_crew.py
src/unemploymentstudios/crews/concept_expansion_crew/config/: agents.yaml  tasks.yaml
src/unemploymentstudios/crews/file_structure_planning_crew/: file_structure_planning_crew.py
src/unemploymentstudios/crews/file_structure_planning_crew/config/: agents.yaml  tasks.yaml
src/unemploymentstudios/crews/general_code_crew/: general_code_crew.py
src/unemploymentstudios/crews/test_crew/: test_crew.py
src/unemploymentstudios/crews/testing_qa_crew/: testing_qa_crew.py
src/unemploymentstudios/knowledge/: concept.json
(+4 files in other folders)
