[project]
name = "unemploymentstudios"
version = "0.1.0"
description = "UnemploymentStudios using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
]

[project.scripts]
kickoff = "unemploymentstudios.main:kickoff"
plot = "unemploymentstudios.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
